# docs/swagger.json
@@ -259,6 +259,43 @@
                 }
             }
         },
+        "/api/libs": {
+            "post": {
+                "description": "Create a library",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Library"
+                ],
+                "summary": "Create library",
+                "parameters": [
+                    {
+                        "description": "DBLibrary",
+                        "name": "DBLibrary",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.DBLibrary"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/api/search": {
             "post": {
                 "description": "Requires a color and query and returns a list of photos",
@@ -429,7 +466,7 @@
             "type": "object",
             "required": [
                 "description",
-                "title"
+                "name"
             ],
             "properties": {
                 "created_at": {
@@ -447,19 +484,16 @@
                 "images": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.ImageResponse"
+                        "type": "string"
                     }
                 },
                 "likes": {
                     "type": "integer"
                 },
-                "owner": {
-                    "$ref": "#/definitions/models.UserResponse"
+                "name": {
+                    "type": "string"
                 },
-                "public": {
-                    "type": "boolean"
-                },
-                "title": {
+                "owner_id": {
                     "type": "string"
                 },
                 "updatedAt": {
@@ -467,20 +501,29 @@
                 },
                 "views": {
                     "type": "integer"
+                },
+                "visibility": {
+                    "$ref": "#/definitions/models.Visibility"
                 }
             }
         },
         "models.DBResponse": {
             "type": "object",
             "properties": {
-                "Followers": {
-                    "type": "integer"
+                "city": {
+                    "type": "string"
+                },
+                "country": {
+                    "type": "string"
                 },
                 "created_at": {
                     "type": "string"
                 },
                 "email": {
                     "type": "string"
+                },
+                "followers": {
+                    "type": "integer"
                 },
                 "following": {
                     "type": "integer"
@@ -514,6 +557,9 @@
                 },
                 "role": {
                     "$ref": "#/definitions/models.UserRole"
+                },
+                "status": {
+                    "$ref": "#/definitions/models.UserStatus"
                 },
                 "updated_at": {
                     "type": "string"
@@ -624,12 +670,10 @@
                     "type": "string"
                 },
                 "role": {
-                    "description": "RawPassword        string           `json:\"raw_password\"`",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/models.UserRole"
-                        }
-                    ]
+                    "$ref": "#/definitions/models.UserRole"
+                },
+                "status": {
+                    "$ref": "#/definitions/models.UserStatus"
                 },
                 "updated_at": {
                     "type": "string"
@@ -650,6 +694,12 @@
             "properties": {
                 "Followers": {
                     "type": "integer"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "country": {
+                    "type": "string"
                 },
                 "created_at": {
                     "type": "string"
@@ -678,6 +728,9 @@
                 "role": {
                     "type": "string"
                 },
+                "status": {
+                    "type": "string"
+                },
                 "updated_at": {
                     "type": "string"
                 },
@@ -697,6 +750,28 @@
                 "UserRoleUser",
                 "UserRoleAdmin",
                 "UserRoleSuperAdmin"
+            ]
+        },
+        "models.UserStatus": {
+            "type": "string",
+            "enum": [
+                "active",
+                "suspended"
+            ],
+            "x-enum-varnames": [
+                "UserStatusActive",
+                "UserStatusSuspended"
+            ]
+        },
+        "models.Visibility": {
+            "type": "string",
+            "enum": [
+                "public",
+                "private"
+            ],
+            "x-enum-varnames": [
+                "IsPublic",
+                "IsPrivate"
             ]
         },
         "services.Photo": {
